--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
         <p class="my-2 text-center">
             A conference from the community for the community.<br />
-            <span class="font-bold">Save the date: 17/18th of October in Vienna at ÖBB's innovation space!</span>
+            <span class="font-bold">Save the date: 17/18th of October in Vienna at ÖBB's Innovation Factory!</span>
         </p>
 
         <p class="my-4 text-center max-w-xl text-base">
