add matrix channel and lighting talk section

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -36,6 +36,19 @@
             Connect with open source and open data communities from
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
         </p>
+
+        <p class="mb-4 text-center max-w-xl text-base">
+            You have questions or want to contribute? <br>
+            Get in touch via <a class="border-b border-dotted font-bold" href="https://matrix.to/#/#open-transport:matrix.org">open-transport:matrix.org</a>
+        </p>
+
+        <details class="w-92 bg-purple-300 rounded-2xl p-4 my-4">
+            <summary class="cursor-pointer">Lighting Talks (5 min each)</summary>
+            <ul class="mt-2 list-disc list-inside flex flex-col gap-1">
+                <li>Introduction to MOTIS</li>
+                <li><a class="border-b border-dotted font-bold" href="https://github.com/motis-project/open-transport.org">Add your lighting talk on GitHub!</a></li>
+            </ul>
+        </details>
 
         <div class="flex gap-4">
             <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
