--- a/web/index.html
+++ b/web/index.html
@@ -42,10 +42,10 @@
             Get in touch via <a class="border-b border-dotted font-bold" href="https://matrix.to/#/#open-transport:matrix.org">open-transport:matrix.org</a>
         </p>
 
-        <details class="w-92 bg-purple-300 rounded-2xl p-4 my-4">
+        <details class="w-92 bg-purple-300 rounded-2xl p-4 my-4 text-base">
             <summary class="cursor-pointer">Lighting Talks (5 min each)</summary>
             <ul class="mt-2 list-disc list-inside flex flex-col gap-1">
-                <li>Introduction to MOTIS</li>
+                <li>Introduction to MOTIS (Felix Gündling)</li>
                 <li><a class="border-b border-dotted font-bold" href="https://github.com/motis-project/open-transport.org">Add your lighting talk on GitHub!</a></li>
             </ul>
         </details>
