Add brief description

--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,51 @@
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
         </p>
 
+        <p class="my-4 text-center max-w-xl text-base">
+            The <strong>Open Transport Community Conference</strong> is an
+            Open Transport Community event, designed for personal meetup,
+            exchange and collaborative work on exciting projects.
+        </p>
+
+        <p class="my-4 text-center max-w-xl text-base">
+            You are working in Open Transport, want to provide data,
+            ensure its quality, are developing tools and are looking for
+            exchange on related topics with the community? Visit the
+            Open Transport Community Conference!
+        </p>
+
+        <div class="my-4">
+            <p class="mb-4 text-center max-w-xl text-base">
+                <b>What to expect?</b>
+            </p>
+
+            <ul class="list-disc ">
+                <li>Meet the community</li>
+                <li>Present your project</li>
+                <li>Learn about new projects</li>
+                <li>Participate on mini workshops</li>
+                <li>Discussions</li>
+                <li>An exciting social program</li>
+                <li>…</li>
+            </ul>
+        </div>
+
+        <div class="my-4">
+            <p class="my-4 text-center max-w-xl text-base">
+                The Open Transport Community Conference intends to bring people
+                together from all areas of Open Transport and to provide
+                discussions on topics, that are often neglected by similar events.
+                Therefore this event is for everyone, who works in Open Transport,
+                either voluntary or commercial, and wants to design and improve
+                existing solutions.
+            </p>
+
+            <p class="my-4 text-center max-w-xl text-base">
+                The event was created, as opportunities for exchange with other
+                peoples in the community were limited on other conferences.
+            </p>
+        </div>
+
         <p class="mb-4 text-center max-w-xl text-base">
             You have questions or want to contribute? <br>
             Get in touch via <a class="border-b border-dotted font-bold" href="https://matrix.to/#/#open-transport:matrix.org">open-transport:matrix.org</a>
