--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,9 @@
             A conference from the community for the community.<br />
             <span class="font-bold">Save the date: 17/18th of October in Vienna at ÖBB's Innovation Factory!</span>
         </p>
+    </div>
 
+    <div class="mx-auto lg:h-screen flex flex-col justify-center items-center">
         <p class="my-4 text-center max-w-xl text-base">
             Connect with open source and open data communities from
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
