Add note about unconference

--- a/web/index.html
+++ b/web/index.html
@@ -75,7 +75,8 @@
                 discussions on topics, that are often neglected by similar events.
                 Therefore this event is for everyone, who works in Open Transport,
                 either voluntary or commercial, and wants to design and improve
-                existing solutions.
+                existing solutions.<br/>
+                The event is therefore intended as an <b>Un</b>conference!
             </p>
 
             <p class="my-4 text-center max-w-xl text-base">
