--- a/web/index.html
+++ b/web/index.html
@@ -15,8 +15,8 @@
 
 <body class="font-sans leading-normal tracking-normal text-lg bg-[#cde6f1]">
 
-    <div class="mx-auto lg:h-screen flex flex-col justify-center items-center">
-        <img src="logo.png" class="mb-2" width="400" height="174" alt="Open Transport Community Logo" />
+    <div class="mx-auto flex flex-col justify-center items-center">
+        <img src="logo.png" class="mt-4 mb-2" width="400" height="174" alt="Open Transport Community Logo" />
 
         <h1 class="text-5xl font-bold my-4 text-center">
             Open Transport<br />
@@ -31,9 +31,7 @@
             A conference from the community for the community.<br />
             <span class="font-bold">Save the date: 17/18th of October in Vienna at ÖBB's Innovation Factory!</span>
         </p>
-    </div>
 
-    <div class="mx-auto lg:h-screen flex flex-col justify-center items-center">
         <p class="my-4 text-center max-w-xl text-base">
             Connect with open source and open data communities from
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
