Restructure and rephrase texts

--- a/web/index.html
+++ b/web/index.html
@@ -64,54 +64,48 @@
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
         </p>
 
-        <p class="my-4 text-center max-w-xl text-base">
-            The <strong>Open Transport Community Conference</strong> is an
-            Open Transport Community event, designed for personal meetup,
-            exchange and collaborative work on exciting projects.
-        </p>
+        <div class="my-2">
+            <p class="mb-2 text-center max-w-xl text-base">
+                <b>Who are we?</b>
+            </p>
+            <p class="text-center max-w-xl text-base">
+                We are a group of people working on different transport-related open-source and open-data
+                projects. With this conference we want to create a space to connect with others working in the
+                same area, to have time for exchange, learning from each other, starting collaborations.
+            </p>
+        </div>
 
-        <p class="my-4 text-center max-w-xl text-base">
-            You are working in Open Transport, want to provide data,
-            ensure its quality, are developing tools and are looking for
-            exchange on related topics with the community? Visit the
-            Open Transport Community Conference!
-        </p>
+        <div class="my-2">
+            <p class="mb-2 text-center max-w-xl text-base">
+                <b>Who is this event for?</b>
+            </p>
+            <p class="text-center max-w-xl text-base">
+               Anyone who works in public transport, either on your free time or commercially, who is open to open
+               source and open data.
+            </p>
+        </div>
 
-        <div class="my-4">
-            <p class="mb-4 text-center max-w-xl text-base">
+        <div class="my-2">
+            <p class="mb-2 text-center max-w-xl text-base">
                 <b>What to expect?</b>
             </p>
-
-            <ul class="list-disc ">
-                <li>Meet the community</li>
-                <li>Present your project</li>
-                <li>Learn about new projects</li>
-                <li>Participate on mini workshops</li>
-                <li>Discussions</li>
-                <li>An exciting social program</li>
-                <li>…</li>
-            </ul>
-        </div>
-
-        <div class="my-4">
-            <p class="my-4 text-center max-w-xl text-base">
-                The Open Transport Community Conference intends to bring people
-                together from all areas of Open Transport and to provide
-                discussions on topics, that are often neglected by similar events.
-                Therefore this event is for everyone, who works in Open Transport,
-                either voluntary or commercial, and wants to design and improve
-                existing solutions.<br/>
-                The event is therefore intended as an <b>Un</b>conference!
+            <p class="mb-2 text-center max-w-xl text-base">
+                We are still working out the details of the conference program. But we do already know that we
+                want this to be an <b>unconference</b>, rather than a traditional conference.
             </p>
-
-            <p class="my-4 text-center max-w-xl text-base">
-                The event was created, as opportunities for exchange with other
-                peoples in the community were limited on other conferences.
+            <p class="mb-2 text-center max-w-xl text-base">
+                This means less focus on talks and more on exchange and discussion. And we'll have participants play a big
+                roll in deciding which topics/sessions/workshops will feature in the program. There will likely be sessions for
+                lightning talks and maybe one or two standard talks, as well.
+            </p>
+            <p class="text-center max-w-xl text-base">
+                Do you already have an idea of a topic or session that you think should be featured?
+                Reach out to us and let us know! (contact details below)
             </p>
         </div>
 
-        <p class="mb-4 text-center max-w-xl text-base">
-            You have questions or want to contribute? <br>
+        <p class="mt-4 mb-4 text-center max-w-xl text-base">
+            <b>You have questions or want to contribute?</b> <br>
             Get in touch via <a class="border-b border-dotted font-bold" href="https://matrix.to/#/#open-transport:matrix.org">open-transport:matrix.org</a>
         </p>
 
@@ -125,7 +119,7 @@
         </details>
         -->
 
-        <div class="flex gap-4">
+        <div class="flex gap-4 mb-4">
             <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
                 href="https://www.tu-darmstadt.de/impressum/index.de.jsp">
                 Imprint
