Fix JSON syntax error

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": 48.221231
+          "latitude": 48.221231,
           "longitude": 16.395555
         },
         "name": "ÖBB Open Innovation Factory"
