--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,12 @@
             Transitous, MOTIS, OpenStreetMap, OpenTripPlanner, and many more!<br />
         </p>
 
+
+        <a class="w-92 bg-purple-300 hover:bg-purple-400 rounded-2xl p-4 my-4 text-base text-center" href="https://pretix.eu/open-transport/2025/">
+            Get your free ticket
+        </a>
+
+
         <div class="my-2">
             <p class="mb-2 text-center max-w-xl text-base">
                 <b>Who are we?</b>
