Add email address

--- a/web/index.html
+++ b/web/index.html
@@ -113,6 +113,9 @@
         <p class="mt-4 mb-4 text-center max-w-xl text-base">
             <b>You have questions or want to contribute?</b> <br>
             Get in touch via <a class="border-b border-dotted font-bold" href="https://matrix.to/#/#open-transport:matrix.org">open-transport:matrix.org</a>
+            <br/>
+            <small>Not familiar with Matrix? You can send us an email as well:<br/>
+            <a href="mailto:info@open-transport.org">info@open-transport.org</a></small>
         </p>
 
         <!--
