fix: update link to GitHub repository

--- a/web/index.html
+++ b/web/index.html
@@ -135,7 +135,7 @@
             </a>
 
             <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
-                href="https://github.com/motis-project/open-transport">
+                href="https://github.com/public-transport/open-transport.org">
                 GitHub
             </a>
         </div>
