Add schedule to website

--- a/web/index.html
+++ b/web/index.html
@@ -97,18 +97,20 @@
                 <b>What to expect?</b>
             </p>
             <p class="mb-2 text-center max-w-xl text-base">
-                We are still working out the details of the conference program. But we do already know that we
-                want this to be an <b>unconference</b>, rather than a traditional conference.
+                This will be an <b>unconference</b>, rather than a traditional conference.
             </p>
             <p class="mb-2 text-center max-w-xl text-base">
                 This means less focus on talks and more on exchange and discussion. And we'll have participants play a big
-                roll in deciding which topics/sessions/workshops will feature in the program. There will likely be sessions for
-                lightning talks and maybe one or two standard talks, as well.
+                roll in deciding which topics/sessions/workshops will feature in the program.
             </p>
-            <p class="text-center max-w-xl text-base">
+            <p class="mb-2 text-center max-w-xl text-base">
+                See the <a href="#schedule">conference schedule</a> below for more details. <!-- todo why link rendered same as normal text? -->
+            </p>
+            <!-- to be replaced by CfP-->
+            <!--p class="text-center max-w-xl text-base">
                 Do you already have an idea of a topic or session that you think should be featured?
                 Reach out to us and let us know! (contact details below)
-            </p>
+            </p-->
         </div>
 
         <p class="mt-4 mb-4 text-center max-w-xl text-base">
@@ -118,6 +120,73 @@
             <small>Not familiar with Matrix? You can send us an email as well:<br/>
             <a href="mailto:info@open-transport.org">info@open-transport.org</a></small>
         </p>
+
+        <div class="my-2" id="schedule"> <!-- centering gets messed up by table, therefore separate div for heading -->
+            <p class="mb-2 max-w-xl text-base">
+                <b>Conference Details</b>
+            </p>
+        </div>
+
+        <div class="my-2">
+            <p class="mb-2 max-w-xl text-base">
+                <b>Schedule</b>
+            </p>
+            <p class="mb-2 max-w-xl text-base">
+                <b>Day 1</b>
+            </p>
+            <table class="mb-2 max-w-xl text-base">
+                <tr><td>09:30&nbsp;</td> <td>Arrival, coffee, hello <a href="#footnote-arrival">[1]</a></td></tr>
+                <tr><td>10:00&nbsp;</td> <td>Welcome from ÖBB & organizers </td></tr>
+                <tr><td>10:15&nbsp;</td> <td> Session pitches <a href="#footnote-pitches">[2]</a> </td></tr>
+                <tr><td>11:00&nbsp;</td> <td>Creating the sessions schedule <a href="#footnote-schedule">[3]</a> </td></tr>
+                <tr><td>11:30&nbsp;</td> <td>First Session slot <a href="#footnote-session">[4]</a> </td></tr>
+                <tr><td>12:30&nbsp;</td> <td>Lunch </td></tr>
+                <tr><td>14:00&nbsp;</td> <td>Second session slot </td></tr>
+                <tr><td>15:00&nbsp;</td> <td>Break </td></tr>
+                <tr><td>15:30&nbsp;</td> <td>Lightning talks <a href="#footnote-lightning">[5]</a> </td></tr>
+                <tr><td>16:00&nbsp;</td> <td>Break </td></tr>
+                <tr><td>16:15&nbsp;</td> <td>Third session slot </td></tr>
+                <tr><td>17:15&nbsp;</td> <td>Time for mingling / impromptu sessions </td></tr>
+                <tr><td>18:00&nbsp;</td> <td>Closing / heading for dinner </td></tr>
+            </table>
+            <p class="mt-2 mb-2 max-w-xl text-base">
+                <b>Day 2</b>
+            </p>
+            <table class="mb-2 max-w-xl text-base">
+                <tr><td>09:30&nbsp;</td> <td>Arrival, coffee, hello</td></tr>
+                <tr><td>09:45&nbsp;</td> <td>Welcome, finalizing the schedule for the day</td></tr>
+                <tr><td>10:00&nbsp;</td> <td>First session slot</td></tr>
+                <tr><td>11:00&nbsp;</td> <td>Break</td></tr>
+                <tr><td>11:30&nbsp;</td> <td>Second session slot</td></tr>
+                <tr><td>12:30&nbsp;</td> <td>Lunch</td></tr>
+                <tr><td>14:00&nbsp;</td> <td>Lightning talks</td></tr>
+                <tr><td>14:30&nbsp;</td> <td>Break</td></tr>
+                <tr><td>15:00&nbsp;</td> <td>Final session slot</td></tr>
+                <tr><td>16:00&nbsp;</td> <td>Time for mingling / impromptu sessions</td></tr>
+                <tr><td>18:00&nbsp;</td> <td>Conference over</td></tr>
+            </table>
+            <p class="mt-2 mb-2 max-w-xl text-base">
+                <b>Footnotes</b>
+            </p>
+            <div class="mt-2 mb-2 max-w-xl text-base">
+               <p id="footnote-arrival">[1] Hi! Settle in and get comfortable :-). We'll try to have all the session proposal that
+                have been submitted before the conference printed out and up on a wall, so that you have a chance to
+                already read up on what is going to happen.</p>
+               <p id="footnote-pitches">[2] Everybody that wants to propose a session is invited to the stage for a very short
+                (1 min HARD limit) session pitch. We would like to hear from those that already submitted a session
+                idea before the conference, of course, but please also come up if you had some spontaneous idea
+                for a session!</p>
+               <p id="footnote-schedule">[3] We'll probably do dot voting to gauge interest for the different proposals and then will create
+                the schedule together on the board. We'll leave some empty slots on the second day for those session
+                ideas that come out of the first conference day.</p>
+               <p id="footnote-session">[4] Each session slot is 60 minutes. How you fill this time is up to you and your session group. You
+                could have a big group discussion, you could split up in different breakout groups and come together
+                again at the end, you could have one person sharing their knowledge or all try to solve some specific
+                problem together. We would love if you could take some notes of the discussion and/or results for
+                those that could not attend that session and post those notes to our github discussions page.</p>
+               <p id="footnote-lightning">[5] There will be a sign-up paper sheet, first come first serve.</p>
+            </div>
+        </div>
 
         <!--
         <details class="w-92 bg-purple-300 rounded-2xl p-4 my-4 text-base">
