Update event description in one more place

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Open Transport Community Conference 2025</title>
     <meta name="author" content="Open Transport Community" />
-    <meta name="description" content="A conference from the community for the community." />
+    <meta name="description" content="The (un)conference about Free Software and Open Data for mobility and public transport." />
     <meta name="keywords" content="open,transport,open source,open data" />
     <link rel="stylesheet" href="output.css" />
     <meta property="og:image" content="https://open-transport.org/logo.png">
