Link to venue website, add venue address
See https://github.com/public-transport/open-transport-community-conference-orga/issues/4.

--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,8 @@
 
         <p class="my-2 text-center">
             The (un)conference about Free Software and Open Data for mobility and public transport.<br />
-            <span class="font-bold">Save the date: 17/18th of October in Vienna at ÖBB's Innovation Factory!</span>
+            <span class="font-bold">Save the date: 17/18th of October in Vienna at
+            <a href="https://openinnovation.oebb.at/de/spaces">ÖBB's Innovation Factory!</a></span>
         </p>
 
         <p class="my-4 text-center max-w-xl text-base">
@@ -126,6 +127,18 @@
                 <b>Conference Details</b>
             </p>
         </div>
+        <div class="my-2">
+            <p class="mb-2 max-w-xl text-base">
+                <b>Location</b>
+            </p>
+            <p class="mb-2 max-w-xl text-base">
+                <a class="border-b border-dotted" href="https://openinnovation.oebb.at/de/spaces">ÖBB Open Innovation Factory</a><br/>
+                Lassallestraße 5<br/>
+                1020 Wien<br/>
+                Austria<br/>
+                <a class="border-b border-dotted" href="https://www.openstreetmap.org/relation/79528">View on OpenStreetMap</a>
+            </p>
+        <div>
 
         <div class="my-2">
             <p class="mb-2 max-w-xl text-base">
