Link to CfP from main page

--- a/web/index.html
+++ b/web/index.html
@@ -112,6 +112,12 @@
                 Do you already have an idea of a topic or session that you think should be featured?
                 Reach out to us and let us know! (contact details below)
             </p-->
+
+            <div class="mx-auto flex flex-col justify-center items-center">
+                <a class="w-92 bg-purple-300 hover:bg-purple-400 rounded-2xl p-4 my-4 text-base text-center" href="cfp.html">
+                    Call for Participation
+                </a>
+            </div>
         </div>
 
         <p class="mt-4 mb-4 text-center max-w-xl text-base">
